2009-08-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/10492
	* binutils-all/objcopy.exp: Run strip-10.

	* binutils-all/strip-10.d: New.
	* binutils-all/unique.s: Likewise.

2009-07-31  Daniel Gutson  <dgutson@codesourcery.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* binutils-all/arm/thumb2-cond.s: Use instructions instead of
	.short.

2009-07-29  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/testranges.s: Replace .value with .short.

2009-07-16  Dave Korn  <dave.korn.cygwin@gmail.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/objcopy.exp: Run testranges and testranges-ia64
	for ELF targets only.

2009-07-16  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/objcopy.exp; Run testranges-ia64.

	* binutils-all/testranges.d: Don't run for ia64.

	* binutils-all/testranges-ia64.d: New.
	* binutils-all/testranges-ia64.s: Likewise.

2009-07-14  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* binutils-all/objcopy.exp (testranges): New test.
	* binutils-all/testranges.d, binutils-all/testranges.s: New files.

2009-06-25  Christopher Faylor  <me+cygwin@cgf.cx>

	* binutils-all/objcopy.exp: Move XFAIL from objcopy_test to
	copy_executable.

2009-06-25  Christopher Faylor  <me+cygwin@cgf.cx>

	* binutils-all/objcopy.exp: Always treat objcopy_test as XFAIL on
	cygwin.

2009-04-16  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/localize-hidden-1.s: Use "==" instead of ".set".
	* binutils-all/localize-hidden-2.s: Likewise.

2009-04-02  Dave Korn  <dave.korn.cygwin@gmail.com>

	* inutils-all/objcopy.exp (strip_executable):  Delete remote dest
	file before downloading.
	(strip_executable_with_saving_a_symbol):  Likewise.
	(keep_debug_symbols_and_test_copy):  Likewise.

2009-03-11  Joseph Myers  <joseph@codesourcery.com>

	* binutils-all/objdump.W, binutils-all/objdump.s: Don't match
	literal "tmpdir/" in expected output.

2009-03-11  Chris Demetriou  <cgd@google.com>

	* binutils-all/ar.exp (deterministic_archive): New test.
